# transformer-from-scratch

./: .gitignore  README.md  pyproject.toml
analysis/: positional_encoding.md
src/transformer/: attention.py  decoder.py  embeddings.py  encoder.py  feed_forward.py  layer_normalization.py  model.py  utils.py
tests/: test_attention.py  test_decoder.py  test_embeddings.py  test_encoder.py  test_model.py
